<resources>
    <string name="app_name">TFM_Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account_msg_1">Don\'t have an account yet?</string>
    <string name="account_msg_2">Create one</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lbl_bet">Bet:</string>
    <string name="lbl_earnings">Earnings:</string>
    <string name="lbl_mean_bet">Mean bet:</string>
    <string name="lbl_n_of_bets">Nº of bets:</string>
    <string name="lbl_fails">Fails:</string>
    <string name="lbl_success_percentage">Success:</string>
    <string name="lbl_benefits">Benefits:</string>
    <string name="lbl_losses">Losses:</string>
    <string name="lbl_mean_odd">Mean Odd:</string>
    <string name="lbl_wins">Wins:</string>
    <string name="lbl_nulls">Nulls:</string>
    <string name="lbl_yield">Yield:</string>
    <string name="event">Event</string>
    <string name="type">Type</string>
    <string name="pick">Pick</string>
    <string name="stake">Stake</string>
    <string name="amount">Amount</string>
    <string name="odds">Odds</string>
    <string name="status">Status</string>
    <string name="tipster">Tipster</string>
    <string name="create">Create</string>

    <string name="event_error">Enter a valid event</string>
    <string name="lbl_status">Status:</string>
    <string name="lbl_stake">Stake:</string>
    <string name="copy">COPY</string>
    <string name="yield">Yield</string>
    <string name="unsubscribe">Unsubscribe</string>
</resources>
