<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorTextPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.master.tfm_android.views.main.principal.MainActivity">



    <TextView
        android:id="@+id/lblUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txtUsernameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblUsername"
        app:layout_constraintLeft_toLeftOf="@+id/lblUsername" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="14sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameDetail" />

    <TextView
        android:id="@+id/txtEmailDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        app:layout_constraintLeft_toLeftOf="@+id/lblEmail" />

    <TextView
        android:id="@+id/lblYield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/yield"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/txtYieldDetail"
        app:layout_constraintTop_toTopOf="@+id/lblUsername" />

    <TextView
        android:id="@+id/txtYieldDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lblYield"
        android:layout_marginEnd="32dp" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.master.tfm_android.views.main.principal.MainActivity">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="6dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnSubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsubscribe"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>